@@ -40,6 +40,9 @@
    - deraadt@cvs.openbsd.org 2006/03/19 18:52:11
      [auth1.c authfd.c channels.c]
      spacing
+   - deraadt@cvs.openbsd.org 2006/03/19 18:53:12
+     [kex.c kex.h monitor.c myproposal.h session.c]
+     spacing
 
 20060325
  - OpenBSD CVS Sync
@@ -4297,4 +4300,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.4252 2006/03/26 02:57:41 djm Exp $
+$Id: ChangeLog,v 1.4253 2006/03/26 02:58:55 djm Exp $
